charts/grafana/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: monasca-grafana
  namespace: monasca
  labels:
    app: monasca-grafana
    component: grafana
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: monasca-grafana
        component: grafana
    spec:
      containers:
        - name: grafana
          image: "monasca/grafana" 
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
          - name: grafana-config
            mountPath: /etc/grafana
      volumes:
        - name: grafana-config
          configMap:
            name: monasca-grafana-configmap
