charts/grafana/grafana-mon-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-mon-ingress
  namespace: monasca
spec:
  tls:
  - hosts:
      - grafana-mon.brilliant.com.bd
    secretName: grafana-mon-ingress
  rules:
  - host: grafana-mon.brilliant.com.bd
    http:
      paths:
      - path: /
        backend:
          serviceName: monasca-grafana
          servicePort: 3000
